--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   http: ^0.13.5
   infinite_scroll_pagination: ^4.0.0
   shared_preferences: ^2.2.2
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
